--- a/templates/page-about-me.twig
+++ b/templates/page-about-me.twig
@@ -84,7 +84,7 @@
 							</div>
 						</div>
 						<div class="textcl2">
-							<p>Overall, my journey has been one of learning and growth. I have pursued my passion for technology, challenged myself with a rigorous academic program, and explored new places and cultures that I want to show you in the following image slider.<br> While there have been obstacles along the way, I am grateful for the experiences that have brought me to where I am today. That's for sure!
+							<p>Overall, my journey has been one of learning and growth. I have pursued my passion for technology, challenged myself with a rigorous academic program, and explored new places and cultures that I want to show you in the following image slider.<br> While there have been obstacles along the way, I am grateful for the experiences that have brought me to where I am today.
 							</p>
 						</div>
 						<div class="row">
