--- a/templates/page-home.twig
+++ b/templates/page-home.twig
@@ -58,7 +58,7 @@
 																				</h3>-->
 										IT PROJECT MANAGEMENT
 										<div class="drop-text">
-											<p>After graduating with a degree in Business Information Technology at the Zurich University of Applied Sciences (ZHAW), I started my career as a developer, working on a variety of web projects. Over the past year, I've gained valuable experience in developing SEO friendly websites, as well as collaborating with cross-functional teams.
+											<p>After graduating with a degree in Business Information Technology at the Zurich University of Applied Sciences (ZHAW), I started my career in working on a variety of web projects. Over the past year, I've gained valuable experience in developing SEO friendly websites, as well as collaborating with cross-functional teams.
 												
 																									In addition to my development work, I've also had the opportunity to take on project management and business analysis responsibilities. This has allowed me to gain a broader perspective on the role of technology in supporting business goals and processes.
 												
@@ -90,7 +90,7 @@
 										<span class="kave-line"></span>
 										PHP
 										<div class="drop-text">
-											<p>Due to working with WordPress, I have experience using PHP as a backend language to create custom themes and plugins. I am proficient in writing PHP code that utilizes WordPress functions, actions, and filters to extend WordPress functionality and add new features. I also have knowledge of WordPress hooks and how to use them to modify theme templates and add options to themes. My experience with PHP has enabled me to create custom WordPress themes according to my clients needs and provide unique user experiences. I am committed to staying up-to-date with the latest PHP development practices and using my skills to create high-quality solutions for clients.</p>
+											<p>I have gained experience using PHP as a backend language to create custom themes and plugins. I am proficient in writing PHP code that utilizes WordPress functions, actions, and filters to extend WordPress functionality and add new features. I also have knowledge of WordPress hooks and how to use them to modify theme templates and add options to themes. My experience with PHP has enabled me to create custom WordPress themes according to my clients needs and provide unique user experiences. I am committed to staying up-to-date with the latest PHP development practices and using my skills to create high-quality solutions for clients.</p>
 										</div>
 									</div>
 								</div>
