new commit third

--- a/templates/page-about-me.twig
+++ b/templates/page-about-me.twig
@@ -40,8 +40,8 @@
 							<div class="column wfull">
 								<div class="textcl1">
 									<p>In this section I would like to explain the study program in more detail, because based on my experiences I am always confronted with the fact that people outside of Switzerland underestimate my skills.<br><br>
-										This study program was made to eliminate the shortage of skilled workers in the trained application area. It is a fully recognized education to get the best jobs in Switzerland. Even as a career changer, one is qualified for a job as a project manager, business analyst, product owner or, with the skills I have acquired in my previous job, as a developer (what I would prefer to work in).<br><br>
-										In the Screenshot on the left hand side you will find what Chatgpt says about this program.</p>
+										This study program was made to eliminate the shortage of skilled workers in the trained application area. It is a fully recognized education to get the best jobs in Switzerland. Even as a career changer, one is qualified for a job as a project manager, business analyst, product owner or, with the skills I have acquired in my previous job and my own learning, as a developer.<br><br>
+										In the Screenshot on the left hand side you will find what Chatgpt says about this study program.</p>
 								</div>
 							</div>
 						</div>
@@ -50,8 +50,8 @@
 							<div class="column wfull">
 								<div class="textcl1">
 									<p>In this section I would like to explain the study program in more detail, because based on my experiences I am always confronted with the fact that people outside of Switzerland underestimate my skills.<br><br>
-										This study program was made to eliminate the shortage of skilled workers in the trained application area. It is a fully recognized education to get the best jobs in Switzerland. Even as a career changer, one is qualified for a job as a project manager, business analyst, product owner or, with the skills I have acquired in my previous job, as a developer (what I would prefer to work in).<br><br>
-										In the Screenshot below you will find what Chatgpt says about this program.</p>
+										This study program was made to eliminate the shortage of skilled workers in the trained application area. It is a fully recognized education to get the best jobs in Switzerland. Even as a career changer, one is qualified for a job as a project manager, business analyst, product owner or, with the skills I have acquired in my previous job and my own learning, as a developer.<br><br>
+										In the Screenshot below you will find what Chatgpt says about this study program.</p>
 								</div>
 							</div>
 							<div class="column wfull">
