--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -15,7 +15,7 @@
 			</nav>
 			<div class="jp-footerlast">
 				<div class="jp-fshortcode">
-					{{ function('do_shortcode', '[quform id="3" name="Contact Footer"]') }}
+					{{ function('do_shortcode', '[Your Quform Shortcode]') }}
 				</div>
 				<div class="jp-icon">
 					<a href="https://line.me/ti/p/HoyOxfI-Sh">
