new commit fourth

--- a/templates/page-about-me.twig
+++ b/templates/page-about-me.twig
@@ -16,7 +16,7 @@
 						<div class="row colspace">
 							<div class="column wfull">
 								<div class="textcl">
-									<p>I started my professional career in the automotive industry, working as a mechanic. While I enjoyed the work, I found myself more addicted to the world of information technology. Then i found a job as a supplier of ICT equipment where i could learn the work of an IT service engineer and in this job it has been confirmed that IT was the right career field for me.<br><br>
+									<p>I started my professional career in the automotive industry, working as a mechanic. While I enjoyed the work, I found myself more addicted to the world of information technology. Then I found a job as a supplier of ICT equipment where I could learn the work of an IT service engineer and in this job it has been confirmed that IT was the right career field for me.<br><br>
 
 										I decided to pursue a degree in business information technology at the ZHAW, a program that was very future-oriented and only required a technical maturity to attend. I started the technical maturity program with 26 and then started at the ZHAW right after. It was a challenging program, but with hard work and dedication, I was able to complete the program and earn my degree at the age of 32.</p>
 								</div>
